tests/fixtures/coflow/invalid/lex/invalid-base-number.cf
a = 0b102
b = 0o789
c = 0xzz
d = 0x
